0.3.4:
Sam Lantinga - Mon Feb 28 12:45:59 PST 2000
 * Fixed a problem where audio stopped playing before the end of the movie
Sam Lantinga - Thu Feb 10 13:17:29 PST 2000
 * Don't crash if a picture block comes before a sequence header block
Sam Lantinga - Sat Feb  5 08:56:25 PST 2000
 * Remove autogenerated files from CVS
Bill Kendrick - Thu Feb 03 16:57:27 PST 2000
 * Does not init. audio or video unless necessary for the MPEG being played.
 * If audio or video are unavailable, does not exit, just skips (or plays
   whichever stream it can).
Bill Kendrick - Sat Jan 22 17:32:00 PST 2000
 * Added --version to plaympeg and made usage help more complete.
Jesper Pedersen - Mon Jan 31 12:33:25 PST 2000
 * Fixed a bug in the pausing code.
Sam Lantinga - Mon Jan 24 12:57:54 PST 2000
 * Disabled consistency checks by default, now plays more video streams
Laurent Bonnaud - Tue Jan 25 13:46:32 PST 2000
 * Speeded up cropping by using an inline function

0.3.3:
Sam Lantinga - Mon Jan 17 19:52:32 PST 2000
 * Updated for the new SDL mixer library release (1.0.3)
Sam Lantinga - Tue Jan 11 16:17:50 PST 2000
 * Fixed so SMPEG compiles on stock RedHat 5.2 systems
Stephane Peter, Sam Lantinga - Thu Jan  10 15:22:33 PST 2000
 * Fixed playing mono MP3 files on stereo audio output
Sam Lantinga - Thu Jan  6 13:02:32 PST 2000
 * SMPEG now detects MP3 files again (broken by RIFF searching code)
 * gtv is now included by default when building an RPM
Sam Lantinga - Mon Jan  3 20:54:32 PST 2000
 * Changelog entries are now Y2K safe. ;-)
 * SMPEG now handles pad packets in the initial system stream
Jim Studt - Mon Jan  3 20:57:52 PST 2000
 * Fixed endian detection on unknown Linux systems (ARM)
Sam Lantinga - Mon Jan  3 21:09:01 PST 2000
 * plaympeg now hides the mouse cursor in fullscreen mode

0.3.2:
SOL -   Updated autoconf for SDL 1.0
SOL -   Fixed audio decoding thread - releases waiting audio threads
SOL -	Fixed audio playback of MPEG videos when using external mixer