@@ -1,3 +1,4 @@
 
 * Some MP3 files have strange audio artifacts on big-endian systems
 * If you don't have a sound card, you need to use --nosound for plaympeg
+* The FPS calculation is broken for looping videos
