@@ -71,22 +71,6 @@ AM_PATH_SDL($SDL_VERSION,
 CFLAGS="$CFLAGS $SDL_CFLAGS"
 LIBS="$LIBS $SDL_LIBS"
 
-dnl Check for SDL mixer support
-AC_ARG_ENABLE(mixer,
-[  --enable-mixer          use the SDL sample mixer for audio [default=no]],
-              , enable_mixer=no)
-if test x$enable_mixer = xyes; then
-    CFLAGS="$CFLAGS -DSDL_MIXER"
-    LIBS="$LIBS -lSDL_mixer"
-fi
-AC_ARG_WITH(mixer-prefix,
-[  --with-mixer-prefix=PFX   Prefix where SDL mixer is installed (optional)],
-            mixer_prefix="$withval", mixer_prefix="")
-if test x$mixer_prefix != x; then
-    CFLAGS="$CFLAGS -I$mixer_prefix/include"
-    LIBS="$LIBS -I$mixer_prefix/lib"
-fi
-
 dnl Add the parent directory for sub-make
 CFLAGS="$CFLAGS -I.. -DNOCONTROLS"
 CXXFLAGS="$CFLAGS"
